Installed react router dom and fixed css source

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -10,7 +10,7 @@ html, body {
   width: 100%;
   color: hslac($white, 1);
   font-family: $font-main;
-  background-color: hslac($background-dark, 1);
+  background-color: hslac($background, 1);
   -webkit-font-smoothing: antialiased;
   scroll-behavior: smooth;
   box-sizing: border-box;
