--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -251,9 +251,9 @@ html, body {
 
 /* Main */
 .main {
-  width: 100%; height: 100%;
+  width: 100%;
   gap: 5em;
-  @include flex-col();
+  @include flex-col-start-center();
 }
 
 /* Header */
