--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -394,6 +394,15 @@ html, body {
     z-index: 2;
   }
 }
+.background-blur {
+  width: 50em; height: 50em;
+  position: absolute;
+  border-radius: 50%;
+  filter: blur(100rem);
+  pointer-events: none;
+  opacity: .5;
+  z-index: 1;
+}
 
 /* Selection */
 ::selection {
