--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -19,6 +19,15 @@ html, body {
 
 .view-width {
   width: calc(100% - 6em);
+  @include phone {
+    width: calc(100% - 2em);
+  }
+  @include tablet {
+    width: calc(100% - 4em);
+  }
+  @include desktop {
+    width: calc(100% - 5em);
+  }
 }
 
 #root {
@@ -29,6 +38,15 @@ html, body {
   display: grid;
   grid-template-columns: 12.5em 1fr;
   place-items: center;
+  @include phone {
+    grid-template-columns: 100%;
+  }
+  @include tablet {
+    grid-template-columns: 100%;
+  }
+  @include desktop {
+    grid-template-columns: 12em 1fr;
+  }
 }
 
 /* Left */
@@ -40,6 +58,12 @@ html, body {
   position: relative;
   grid-template-rows: 5em 1fr;
   z-index: 10;
+  @include phone {
+    display: none;
+  }
+  @include tablet {
+    display: none;
+  }
   &-logo {
     height: 1.5em;
     fill: transparent;
@@ -49,7 +73,6 @@ html, body {
     stroke-width: 2em;
     &-wrapper {
       width: 100%; height: 5em;
-      cursor: pointer;
       @include flex-left();
     }
   }
@@ -63,7 +86,7 @@ html, body {
         margin: 0; padding: 0;
         width: 100%;
         list-style-type: none;
-        gap: .5em;
+        gap: .75em;
         @include flex-col-left-ns();
 
         &-item {
@@ -74,9 +97,30 @@ html, body {
             color: hslac($white, 1);
             text-decoration: none;
             cursor: pointer;
+            gap: .5em;
+            @include flex-left();
+
+            &-icon {
+              width: 1em;
+              #bag-outer, #folder-outer, #heart-outer, #setting-outer {
+                stroke: none;
+                stroke-width: 1;
+                fill: none;
+                fill-rule: evenodd;
+                stroke-linecap: round;
+                stroke-linejoin: round;
+              }
+              #bag, #folder, #heart, #setting {
+                stroke: hslac($white, .75);
+                stroke-width: 2px;
+              }
+            }
           }
           &-link.active {
             color: hslac($primary, 1);
+            #bag, #folder, #heart, #setting {
+              stroke: hslac($primary, .75);
+            }
           }
         }
       }
@@ -89,7 +133,7 @@ html, body {
         margin: 0; padding: 0;
         width: 100%;
         list-style-type: none;
-        gap: .5em;
+        gap: .75em;
         @include flex-col-left-ns();
 
         &-item {
@@ -100,9 +144,30 @@ html, body {
             color: hslac($white, 1);
             text-decoration: none;
             cursor: pointer;
+            gap: .5em;
+            @include flex-left();
+
+            &-icon {
+              width: 1em;
+              #setting-outer, #message-outer {
+                stroke: none;
+                stroke-width: 1;
+                fill: none;
+                fill-rule: evenodd;
+                stroke-linecap: round;
+                stroke-linejoin: round;
+              }
+              #setting, #message {
+                stroke: hslac($white, .75);
+                stroke-width: 2px;
+              }
+            }
           }
           &-link.active {
             color: hslac($primary, 1);
+            #setting, #message {
+              stroke: hslac($primary, .75);
+            }
           }
         }
       }
@@ -119,6 +184,12 @@ html, body {
   overflow: hidden;
   overflow-y: scroll;
   z-index: 10;
+  @include phone {
+    padding: 0;
+  }
+  @include tablet {
+    padding: .5em 0 0 0;
+  }
 }
 
 /* Navbar */
@@ -127,10 +198,84 @@ html, body {
   display: grid;
   position: relative;
   grid-template-columns: 70% 1fr;
+  place-items: center;
   gap: 2em;
+  @include phone {
+    gap: .75em;
+    grid-template-columns: auto 1fr auto;
+  }
+  @include tablet {
+    gap: 1em;
+    grid-template-columns: auto 1fr auto;
+  }
+  @include desktop {
+    grid-template-columns: 1fr auto;
+  }
 
+  &-button {
+    margin: 0;
+    width: 2em;
+    height: 1.5em;
+    display: none;
+    position: relative;
+    transform: rotate(0deg) scale(.8, .8);
+    transition: .35s cubic-bezier($transition-main, 1.175);
+    cursor: pointer;
+    z-index: 110;
+    @include phone {
+      display: block;
+    }
+    @include tablet {
+      display: block;
+    }
+
+    span {
+      left: 0;
+      width: 100%;
+      height: 2px;
+      display: block;
+      position: absolute;
+      background: hslac($white, 1);
+      border-radius: 19px;
+      opacity: 1;
+      transform: rotate(0deg);
+      transition: .35s cubic-bezier($transition-main, 1.175);
+
+      &:nth-child(1) {
+        top: 0;
+        width: 100%;
+      }
+      &:nth-child(2), &:nth-child(3) {
+        top: 0.75em;
+        width: 75%;
+      }
+      &:nth-child(4) {
+        top: 1.5em;
+        width: 40%;
+      }
+    }
+    &.open {
+      span:nth-child(1) {
+        top: 2em;
+        width: 0;
+      }
+      span:nth-child(2) {
+        width: 100%;
+        transform: rotate(45deg);
+      }
+      span:nth-child(3) {
+        width: 100%;
+        transform: rotate(-45deg);
+      }
+      span:nth-child(4) {
+        top: 18px; left: 50%;
+        width: 0;
+      }
+    }
+  }
   &-left {
     width: 100%; height: 100%;
+    position: relative;
     @include flex-left();
 
     &-search {
@@ -151,7 +296,7 @@ html, body {
         }
         #search {
           stroke: hslac($white, .75);
-          stroke-width: 1.5px;
+          stroke-width: 2px;
         }
       }
       &-input {
@@ -161,6 +306,15 @@ html, body {
         background-color: hslac($white, .13);
         border-radius: 5rem;
         border: none;
+        @include phone {
+          width: 100%;
+        }
+        @include tablet {
+          width: 100%;
+        }
+        @include desktop {
+          width: 100%;
+        }
         &:focus {
           outline: none;
         }
@@ -181,16 +335,29 @@ html, body {
       grid-template-columns: 3em 3em 1fr;
       place-items: center;
       gap: 1em;
+      @include phone {
+        grid-template-columns: 100%;
+      }
+      @include tablet {
+        grid-template-columns: 100%;
+      }
 
       &-button {
         width: 100%; height: 3em;
         background-color: hslac($white, .13);
         border-radius: 50%;
+        cursor: pointer;
         @include flex-center();
+        @include phone {
+          display: none;
+        }
+        @include tablet {
+          display: none;
+        }
 
         &-icon {
           left: 2em;
-          width: 1.75em;
+          width: 1.5em;
           #notification-outer, #bag-outer {
             stroke: none;
             stroke-width: 1;
@@ -201,7 +368,7 @@ html, body {
           }
           #notification, #bag {
             stroke: hslac($white, .75);
-            stroke-width: 1.5px;
+            stroke-width: 2px;
           }
         }
       }
@@ -210,7 +377,15 @@ html, body {
         display: grid;
         grid-template-columns: 3em 1fr .75em;
         place-items: center;
+        text-decoration: none;
         gap: .75em;
+        cursor: pointer;
+        @include phone {
+          grid-template-columns: 3em;
+        }
+        @include tablet {
+          grid-template-columns: 3em;
+        }
 
         &-picture {
           width: 100%; height: 3em;
@@ -232,10 +407,25 @@ html, body {
           margin: 0;
           width: 100%;
           color: hslac($white, 1);
+          @include phone {
+            display: none;
+          }
+          @include tablet {
+            display: none;
+          }
+          &-text {
+            margin: 0;
+          }
         }
         &-arrow {
-          margin: 0 2.5em 0 0;
+          margin: 0;
           width: 100%;
+          @include phone {
+            display: none;
+          }
+          @include tablet {
+            display: none;
+          }
           path {
             fill: none;
             stroke: hslac($white, 1);
@@ -262,6 +452,15 @@ html, body {
   display: grid;
   grid-template-columns: 70% 1fr;
   gap: 2em;
+  @include phone {
+    grid-template-columns: 100%;
+  }
+  @include tablet {
+    grid-template-columns: 100%;
+  }
+  @include desktop {
+    grid-template-columns: 100%;
+  }
 
   &-left {
     width: 100%; height: 100%;
@@ -286,6 +485,7 @@ html, body {
           background-color: hslac($black, .5);
           backdrop-filter: blur(.5rem);
           border-radius: 5em;
+          cursor: pointer;
         }
       }
       &-background {
@@ -313,6 +513,15 @@ html, body {
   &-right {
     width: 100%; height: 100%;
     @include flex-center();
+    @include phone {
+      display: none;
+    }
+    @include tablet {
+      display: none;
+    }
+    @include desktop {
+      display: none;
+    }
 
     &-wrapper {
       width: 100%; height: 100%;
