--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -472,6 +472,12 @@ html, body {
       border-radius: 2rem;
       overflow: hidden;
 
+      &-logo {
+        margin: 0;
+        left: 1em; bottom: 1em;
+        position: absolute;
+        z-index: 20;
+      }
       &-categories {
         left: 1.25em; top: 1.25em;
         position: absolute;
@@ -557,19 +563,38 @@ html, body {
   width: 100%; height: 20em;
   &-inner {
     width: 100%; height: 100%;
+    display: grid;
+    grid-template-columns: repeat(100, 15em);
     gap: 1em;
-    @include flex-left();
+    overflow: hidden;
 
     &-game {
       width: 15em; height: 20em;
+      position: relative;
       border-radius: 1.25rem;
       overflow: hidden;
+      @include flex-center();
+
+      &-title {
+        margin: 0; padding: 1em;
+        bottom: 0;
+        position: absolute;
+        text-align: center;
+        word-break: break-word;
+        z-index: 20;
+      }
       &-background {
         width: 100%; height: 100%;
         position: relative;
         overflow: hidden;
         @include flex-center();
 
+        &::after {
+          width: 100%; height: 100%;
+          content: "";
+          background: linear-gradient(hslac($black, 0) 0, hslac($black, .67) 100%);
+          z-index: 15;
+        }
         &-image {
           min-width: 100%; min-height: 100%;
           max-width: 110%;
