--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -584,15 +584,15 @@ html, body {
 .game-scroller {
   width: 100%;
   gap: 1em;
+  overflow: hidden;
   @include flex-col-left-ns();
 
   &-title {
     margin: 0;
   }
   &-inner {
-    width: 100%; height: 100%;
-    display: grid;
-    grid-template-columns: repeat(100, 15em);
+    height: 100%;
+    display: flex;
     gap: 1em;
     overflow: hidden;
 
