--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -555,6 +555,37 @@ html, body {
       background-color: hslac($black, 1);
       border-radius: 2rem;
       overflow: hidden;
+      @include flex-center();
+
+      &-top {
+        left: 0; top: 0;
+        margin: 2.5em;
+        position: absolute;
+        color: hslac($white, 1);
+        z-index: 25;
+        @include flex-col-left-ns();
+        &-title {
+          margin: 0;
+        }
+      }
+      &-bottom {
+        left: 0; bottom: 0;
+        margin: 2.5em;
+        position: absolute;
+        color: hslac($white, 1);
+        z-index: 25;
+        @include flex-col-left-ns();
+
+        &-button {
+          padding: 1.2em 1.8em;
+          font-size: $paragraph;
+          color: hslac($white, 1);
+          background-color: hslac($black, .5);
+          border-radius: .5rem;
+          border: none;
+          cursor: pointer;
+        }
+      }
       &-background {
         width: 100%; height: 100%;
         position: relative;
@@ -664,7 +695,7 @@ html, body {
   pointer-events: none;
   user-select: none;
   opacity: .5;
-  z-index: 1;
+  z-index: -1;
   @include phone {
     width: calc(100vw - 10vw); height: 75vh;
   }
