--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -479,6 +479,13 @@ html, body {
       grid-template-columns: 100%;
     }
   }
+  &-inner-2 {
+    width: 100%; height: 100%;
+    display: grid;
+    position: absolute;
+    grid-template-columns: 100%;
+    gap: 2em;
+  }
 
   &-left {
     width: 100%; height: 100%;
@@ -637,8 +644,10 @@ html, body {
       &-title {
         margin: 0; padding: 1em;
         bottom: 0;
+        color: hslac($white, 1);
         position: absolute;
         text-align: center;
+        text-decoration: none;
         word-break: break-word;
         z-index: 20;
       }
