styled gamecard, profile, and related things

--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -1,6 +1,7 @@
 /* Main */
 $primary: hsl(0, 88%, 70%);
 $background: hsl(312, 13%, 8%);
+$background-dark: hsl(312, 9%, 6%);
 /* Colors */
 $black: hsl(0, 0%, 0%);
 $white: hsl(0, 0%, 100%);
